# BowlingSimulator

./: CMakeLists.txt  Jenkinsfile  README.md
include/: FinalFrame.h  Frame.h  FrameSet.h  PinSet.h
include/interface/: IFrame.h  IPinSet.h
src/: FinalFrame.cpp  Frame.cpp  FrameSet.cpp  PinSet.cpp  main.cpp
test/: TestFinalFrame.cpp  TestFrame.cpp  TestFrameSet.cpp  TestPinSet.cpp  testmain.cpp  trompeloeil.hpp
test/mock/: MockFrame.h  MockPinSet.h
